--- a/Index.html
+++ b/Index.html
@@ -5,26 +5,33 @@
 	         <link rel="stylesheet" type="text/css" href="style.css">
 			 <title> Dogs </title>
      </head>
-	 <div class="grid">
-	   <div class="column">
-	   <div class="column">
-	   <div class="column">
-	   <div class="column">
-	
+	 
+ 
 	
 	 <body>
 	  <div class="div">
 	  
 	  
-        <div  class="column"><a href="example.html"> example</div>
-         <div class="column"><a href="example.html">example</div> 
-		 <div class="column"><a href="example.html">Example</div> 
-		 <div class="column"><a href="example.html">Example</div>
+         <div  class="column"><a href="example.html"> Dogs</div>
+         <div class="column"><a href="example2.html">Cats</div> 
+		 <div class="column"><a href="example3.html">Comparison</div> 
+		 <div class="column"><a href="example4.html">Call to Action</div>
 		 </a>
+		 <div class="grid">
+  <div class="column">
+  <div class="column">
+  <div class="column">
+  <div class="column">
+  <div class="column">
+ </div>
+ <div class="grid-colspan1"></div>
+  <div class="grid-colspan2"></div>
+	
+		
 </div>
     
 	  <h2>Why are dogs better than cats</h2> 
-	 <a> <p> A way to compare dogs over cats are that they are better overall as pets than cats.They have better manners than cats and can be trained better than cats can.
-	   <img class="dog" src="images/dog1.jfif"> </p> </a>
+	 <a> <p> A way to compare dogs over cats are that they are better overall as pets than cats.They have better manners than cats and can be trained better too.thry
+	   <img class="dog" src="images/dog1.jfif"> </p> 
 </body>
 </html>
