--- a/Index.html
+++ b/Index.html
@@ -31,7 +31,7 @@
 </div>
     
 	  <h2>Why are dogs better than cats</h2> 
-	 <a> <p> A way to compare dogs over cats are that they are better overall as pets than cats.They have better manners than cats and can be trained better too.thry
+	 <a> <p> A way to compare dogs over cats are that they are better overall as pets than cats.They have better manners than cats and can be trained better too.
 	   <img class="dog" src="images/dog1.jfif"> </p> 
 </body>
 </html>
